@@ -9,14 +9,11 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import org.springframework.cache.CacheManager;
-import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 public class ProductServiceTest {
@@ -24,107 +21,107 @@ public class ProductServiceTest {
     @Mock
     private ProductRepository productRepository;
 
+    @Mock
+    private ProductMapper productMapper;
+
     @InjectMocks
     private ProductService productService;
 
-    private CacheManager cacheManager;
+    private ProductDto productDto;
+    private Product product;
 
     @BeforeEach
     public void setUp() {
         MockitoAnnotations.openMocks(this);
-        cacheManager = new ConcurrentMapCacheManager();
-        // Ensure cache is cleared before each test
-        cacheManager.getCache("products").clear();
-        cacheManager.getCache("productsByCatalog").clear();
+        productDto = TestData.createProductDto();
+        product = TestData.createProduct();
+        when(productMapper.toDto(product)).thenReturn(productDto);
+        when(productMapper.toEntity(productDto)).thenReturn(product);
     }
 
     @Test
     public void testGetAllProducts() {
         // Given
-        Product product = new Product();
-        product.setId(1);
-        product.setName("Product 1");
-        ProductDto productDto = ProductMapper.INSTANCE.toDto(product);
-        when(productRepository.findAll()).thenReturn(Arrays.asList(product));
+        when(productRepository.findAll()).thenReturn(List.of(product));
 
         // When
-        var result = productService.getAllProducts();
+        List<ProductDto> result = productService.getAllProducts();
 
         // Then
-        verify(productRepository, times(1)).findAll();
         assertEquals(1, result.size());
-        assertEquals(productDto.getName(), result.get(0).getName());
+        assertEquals(productDto, result.get(0));
+        verify(productRepository).findAll();
     }
 
     @Test
-    public void testGetProductById() {
+    public void testGetProductById_Success() {
         // Given
-        Product product = new Product();
-        product.setId(1);
-        product.setName("Product 1");
-        ProductDto productDto = ProductMapper.INSTANCE.toDto(product);
         when(productRepository.findById(1)).thenReturn(Optional.of(product));
 
         // When
-        var result = productService.getProductById(1);
+        ProductDto result = productService.getProductById(1);
 
         // Then
-        verify(productRepository, times(1)).findById(1);
-        assertEquals(productDto.getName(), result.getName());
+        assertEquals(productDto, result);
+        verify(productRepository).findById(1);
+    }
+
+    @Test
+    public void testGetProductById_NotFound() {
+        // Given
+        when(productRepository.findById(1)).thenReturn(Optional.empty());
+
+        // When
+        ProductDto result = productService.getProductById(1);
+
+        // Then
+        assertNull(result);
+        verify(productRepository).findById(1);
     }
 
     @Test
     public void testGetProductsByCatalogId() {
         // Given
-        Product product = new Product();
-        product.setId(1);
-        product.setName("Product 1");
-        ProductDto productDto = ProductMapper.INSTANCE.toDto(product);
-        when(productRepository.findByCatalogId(1)).thenReturn(Arrays.asList(product));
+        when(productRepository.findByCatalogId(1)).thenReturn(List.of(product));
 
         // When
-        var result = productService.getProductsByCatalogId(1);
+        List<ProductDto> result = productService.getProductsByCatalogId(1);
 
         // Then
-        verify(productRepository, times(1)).findByCatalogId(1);
         assertEquals(1, result.size());
-        assertEquals(productDto.getName(), result.get(0).getName());
+        assertEquals(productDto, result.get(0));
+        verify(productRepository).findByCatalogId(1);
     }
 
     @Test
     public void testCreateProduct() {
         // Given
-        ProductDto productDto = new ProductDto();
-        productDto.setName("Product 1");
-        Product product = ProductMapper.INSTANCE.toEntity(productDto);
-        when(productRepository.save(product)).thenReturn(product);
+        when(productRepository.save(any(Product.class))).thenReturn(product);
+        when(productMapper.toDto(any(Product.class))).thenReturn(productDto);
+        when(productMapper.toEntity(any(ProductDto.class))).thenReturn(product);
 
         // When
-        var result = productService.createProduct(productDto);
+        ProductDto result = productService.createProduct(productDto);
 
         // Then
-        verify(productRepository, times(1)).save(product);
-        assertEquals(productDto.getName(), result.getName());
+        assertNotNull(result); // Null olup olmadığını kontrol et
+        assertEquals(productDto, result);
+        verify(productRepository).save(any(Product.class));
     }
 
     @Test
     public void testUpdateProduct() {
         // Given
-        Product product = new Product();
-        product.setId(1);
-        product.setName("Product 1");
-        ProductDto productDto = new ProductDto();
-        productDto.setName("Updated Product");
         when(productRepository.findById(1)).thenReturn(Optional.of(product));
         when(productRepository.save(product)).thenReturn(product);
 
         // When
-        var result = productService.updateProduct(1, productDto);
+        ProductDto result = productService.updateProduct(1, productDto);
 
         // Then
-        verify(productRepository, times(1)).findById(1);
-        verify(productRepository, times(1)).save(product);
-        assertEquals(productDto.getName(), result.getName());
+        assertEquals(productDto, result);
+        verify(productRepository).findById(1);
+        verify(productRepository).save(product);
     }
 
     @Test
@@ -133,7 +130,7 @@ public class ProductServiceTest {
         productService.deleteProduct(1);
 
         // Then
-        verify(productRepository, times(1)).deleteById(1);
+        verify(productRepository).deleteById(1);
     }
 
     @Test
@@ -142,6 +139,6 @@ public class ProductServiceTest {
         productService.deleteAllProducts();
 
         // Then
-        verify(productRepository, times(1)).deleteAll();
+        verify(productRepository).deleteAll();
     }
 }
